syntax = "proto3";

package roaure.v1;

import "roaure/v1/time.proto";

option go_package          = "github.com/Greateapot/roaure/genproto/roaure/v1;roaurev1";
option java_package        = "re.greateapot.roaure.api.dto";
option java_multiple_files = true;

// Конфигурация мониторинга
message MonitorConf {
    // Порог загрузки (бит/с)
    double download_threshold = 1;

    // Интервал замеров
    Time poll_interval = 2;

    // Кол-во подряд плохих замеров
    uint32 bad_count_limit = 3;
}